[package]
name = "zygisk-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
v2 = []
v3 = []
v4 = []
default = ["v2"]

[dependencies]
typed-jni = { git = "https://github.com/Kr328/typed-jni-rs.git", default-features = false }
libc = "0.2"
rustix = "0.38"
